[package]
name = "wiki-md"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = "4.0"
envir = "0.4"
log = "0.4"
image = "0.25"
pulldown-cmark = "0.11"
tera = "1.0"
tera-hot = "0.4"
regex = "1.1"
walkdir = "2.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]
